EMIdevelopment/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AcctSeedERP__Default_Packing_Slip_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Packing Slip Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Packing Slip</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts (Default Packing Slip Format)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Default_Purchase_Order_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Purchase Order Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Purchase Order</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts (Default Purchase Order Format)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Account_Payable_Terms__c</fullName>
        <inlineHelpText>Used to calculate default Payable Due Date.</inlineHelpText>
        <label>Payable Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates account is eligible for use in accounting application.</inlineHelpText>
        <label>Accounting Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Type__c</fullName>
        <inlineHelpText>Used in filtered lookups for Payable and Billing screens.</inlineHelpText>
        <label>Accounting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer and Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Activity_Statement_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Overrides the default Activity Statement defined in Accounting Settings for this specific Customer.</inlineHelpText>
        <label>Activity Statement Format</label>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts (Activity Statement Format)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Alternate_Payee_Name__c</fullName>
        <inlineHelpText>Alternate payee name which can be used to populate the payee field on a cash disbursement.</inlineHelpText>
        <label>Alternate Payee Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default for main contact in Accounting Seed Billing, Sales Orders, Payables, and Purchase Orders.</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Days_Due__c</fullName>
        <inlineHelpText>Used to calculate default Billing Due Date.</inlineHelpText>
        <label>Billing Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Discount_Days_Due__c</fullName>
        <inlineHelpText>Used to calculate payment due date for a prompt payment discount on a billing.</inlineHelpText>
        <label>Billing Discount Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Discount_Percent__c</fullName>
        <inlineHelpText>Used to determine the discount off the Billing Total if payment is received within Billing Discount Days Due.</inlineHelpText>
        <label>Billing Discount %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to configure formatting and display of fields in Billing PDF. Overrides the default Billing Format defined in Accounting Settings.</inlineHelpText>
        <label>Billing Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Billing</value>
            </filterItems>
            <infoMessage>The Type must equal &quot;Billing&quot;</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts (Billing Format)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Terms_Name__c</fullName>
        <inlineHelpText>The name of the billing terms as you would like them to appear on the invoice.</inlineHelpText>
        <label>Billing Terms Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Credit_Card_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field denotes a credit card vendor. If checked this account will display in the credit card field filtered lookup on the expense object.</inlineHelpText>
        <label>Credit Card Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_1099_Box__c</fullName>
        <inlineHelpText>Informational field used on 1099 reports and file export.</inlineHelpText>
        <label>Default 1099 Box</label>
        <picklist>
            <picklistValues>
                <fullName>1. Rents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Royalties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Other Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Federal Tax Withheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Fishing Boat Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Medical Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Nonemployee Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Substitute Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Crop Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13. Golden Parachute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14. Attorney Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15a. Section 409A Deferrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15b. Section 409A Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16. State Tax Withheld</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default Expense GL Account used for this Vendor when creating Payable records.</inlineHelpText>
        <label>Default Expense GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Days_Due__c</fullName>
        <inlineHelpText>Used to calculate payment due date for a prompt payment discount on an Account Payable.</inlineHelpText>
        <label>Payable Discount Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Percent__c</fullName>
        <inlineHelpText>Used to determine the discount off the Payable Total if payment is made within Payable Discount Days Due.</inlineHelpText>
        <label>Payable Discount %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__File_Import_Match_Name__c</fullName>
        <inlineHelpText>Used to match the vendor account to a specific record in the Bank Direct Connect and Bank Import.</inlineHelpText>
        <label>File Import Match Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Accounts (GL Variable 1)</relationshipLabel>
        <relationshipName>AccountsGLAV1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Accounts (GL Variable 2)</relationshipLabel>
        <relationshipName>AccountsGLAV2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Accounts (GL Variable 3)</relationshipLabel>
        <relationshipName>AccountsGLAV3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Outstanding_Statement_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Overrides the default Outstanding Statement defined in Accounting Settings for this specific Customer.</inlineHelpText>
        <label>Outstanding Statement Format</label>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default for main shipping contact in Accounting Seed Billing, Sales Orders and Purchase Orders</inlineHelpText>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Shipping Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Stripe_Customer_Id__c</fullName>
        <inlineHelpText>External identification tag of this customer record in Stripe.</inlineHelpText>
        <label>Stripe Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Taxpayer_Identification_Number__c</fullName>
        <inlineHelpText>Informational field used on 1099 reports and file export.</inlineHelpText>
        <label>Taxpayer Identification Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__X1099_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Includes disbursements made to this vendor on 1099 reports and file export.</inlineHelpText>
        <label>1099 Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>Division__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lat_Long__c</fullName>
        <label>Lat/Long</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Location_Address_City__c</fullName>
        <label>Service Location City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address_Line_1__c</fullName>
        <label>Location Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address_State__c</fullName>
        <label>Service Location State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address_Zip__c</fullName>
        <label>Service Location Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this account being designated as a National Account?</description>
        <inlineHelpText>Is this account being designated as a National Account?</inlineHelpText>
        <label>National Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Lat_Long__c</fullName>
        <label>Original Lat/Long</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Sales_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Same_as_Billing_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if shipping address is the same as billing address</description>
        <label>Shipping Address Same as Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_GC_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State GC Required</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Vendor_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>AcctSeed__Default_Expense_GL_Account__c</columns>
        <columns>AcctSeed__File_Import_Match_Name__c</columns>
        <columns>AcctSeed__Account_Payable_Terms__c</columns>
        <columns>AcctSeed__Discount_Percent__c</columns>
        <columns>AcctSeed__Discount_Days_Due__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Accounting_Type__c</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filters>
        <label>Vendor Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Billing</fullName>
        <active>true</active>
        <description>Identifies where bills and payments should be sent</description>
        <label>Billing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>End customers, primarily carriers</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Jurisdiction</fullName>
        <active>true</active>
        <description>Jurisdiction program/site exists in</description>
        <label>Jurisdiction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>Identifies a vendor which provides services and products</description>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Account_Payable_Terms_Positive_Value</fullName>
        <active>true</active>
        <description>The payable terms field must be a positive value.</description>
        <errorConditionFormula>AcctSeed__Account_Payable_Terms__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeed__Account_Payable_Terms__c</errorDisplayField>
        <errorMessage>The payable terms field must be a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Discount_Days_Due_Positive_Value</fullName>
        <active>true</active>
        <description>The discount days field must be a positive value.</description>
        <errorConditionFormula>AcctSeed__Discount_Days_Due__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeed__Discount_Days_Due__c</errorDisplayField>
        <errorMessage>The discount days due field must be a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Discount_Percent_Positive_Value</fullName>
        <active>true</active>
        <description>The discount percent field must be a positive value.</description>
        <errorConditionFormula>AcctSeed__Discount_Percent__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeed__Discount_Percent__c</errorDisplayField>
        <errorMessage>The discount % field must be a positive number.</errorMessage>
    </validationRules>
</CustomObject>